Tercer commit frontend: Proyecto Desarrollo Web Módulo 2

--- a/CodificaConGuali/config.html
+++ b/CodificaConGuali/config.html
@@ -34,8 +34,8 @@
             <button class="btn cancelar" id="btn-cancelar" style="display: none;" onclick="cancelarEdicion()">Cancelar</button>
             <button class="btn borrar" id="btn-borrar" style="display: none;" onclick="borrarPista()">Borrar</button>
             <button class="btn borrar" id="btn-limpiar" onclick="limpiarGrid()">Limpiar grid</button>
-            <button class="btn cargar" onclick="cargarDesdeArchivo()">Cargar desde Archivo</button>
-            <button class="btn exportar" onclick="exportarHaciaArchivo()">Exportar hacia Archivo</button>
+            <button class="btn cargar" id="btn-cargar" onclick="cargarDesdeArchivo()">Cargar desde Archivo</button>
+            <button class="btn exportar" id="btn-exportar" onclick="exportarHaciaArchivo()">Exportar hacia Archivo</button>
         </div>
 
         <div class="pistas-guardadas">
